[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line_length = 88
target_version = ["py39"]

[tool.coverage.run]
branch = true
source = ["aiopvpc"]

[tool.coverage.paths]
source = ["aiopvpc/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
addopts = "-vv -s --cov --cov-report term --cov-report html -m 'not real_api_call'"
log_level = "INFO"
log_format = "%(asctime)s.%(msecs)03d %(levelname)s: (%(filename)s:%(lineno)s): %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_format = "%(asctime)s.%(msecs)03d %(name)s: %(lineno)s %(levelname)s: %(message)s"
log_cli_level = "INFO"
log_cli_date_format = "%H:%M:%S"
markers = [
    "real_api_call: Tests making requests to api.esios.ree.es (deselected by default)",
]

[tool.poetry]
name = "aiopvpc"
version = "3.0.0"
description = "Retrieval of Spanish Electricity hourly prices (PVPC)"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/aiopvpc"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = ">=3.7.4.post0"
async_timeout = ">=3.0.1"
holidays = ">0.11.1"
"backports.zoneinfo" = {version = "^0.2.1", python = "<3.9"}

[tool.poetry.dev-dependencies]
pytest-sugar = ">=0.9.2"
pytest = ">=5.3.5"
pytest-cov = ">=2.8.1"
pytest-timeout = ">=1.3.3"
pytest-asyncio = ">=0.15.1"
pre-commit = ">=2.2.0"
black = ">=19.10b0"
flake8 = ">=3.7.9"
flake8-broken-line = ">=0.1.1"
flake8-bugbear = ">=20.1.0"
flake8-builtins = ">=1.4.2"
flake8-comprehensions = ">=3.1.4"
flake8-import-order = ">=0.18.1"
flake8-mutable = ">=1.2.0"
flake8-pie = ">=0.4.2"
flake8-quotes = ">=2.1.1"
flake8-string-format = ">=0.2.3"
flake8-tidy-imports = ">=3.1.0"
pep8-naming = ">=0.9.1"
mypy = ">=0.800"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
