[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line_length = 88
target_version = ["py311"]

[tool.coverage.run]
branch = true
source = ["aiopvpc"]

[tool.coverage.paths]
source = ["aiopvpc/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
addopts = "-vv -s --cov --cov-report term --cov-report html -m 'not real_api_call'"
log_level = "INFO"
log_format = "%(asctime)s.%(msecs)03d %(levelname)s: (%(filename)s:%(lineno)s): %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_format = "%(asctime)s.%(msecs)03d %(name)s: %(lineno)s %(levelname)s: %(message)s"
log_cli_level = "INFO"
log_cli_date_format = "%H:%M:%S"
markers = [
    "real_api_call: Tests making requests to api.esios.ree.es (deselected by default)",
]

[tool.poetry]
name = "aiopvpc"
version = "4.2.2"
description = "Retrieval of Spanish Electricity hourly prices (PVPC)"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/aiopvpc"

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = ">=3.7.4.post0"
async_timeout = ">=3.0.1"

[tool.poetry.dev-dependencies]
pytest-sugar = ">=0.9.2"
pytest = ">=5.3.5"
pytest-cov = ">=2.8.1"
pytest-timeout = ">=1.3.3"
pytest-asyncio = ">=0.15.1"
pre-commit = ">=2.2.0"
python-dotenv = ">=0.21.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
